--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/home/mylaptop/Coding/Challenges /Challenge 4/launch-countdown-timer-main/images/Wesite logo.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/home/mylaptop/GitHub/Launch-_Countdown-_Timer-Viraj/images/Wesite logo.ico">
   
   <title>Launch Countdown Timer</title>
   <style>
